# EstructurasDatos

./: .gitignore  README.md  asignar_revisiones.py  evaluar.py  pyproject.toml  revision_Tiago.md
clase_01/: README.md
clase_01/notebooks/: Notas.ipynb  clase_01_estructuras_y_eficiencia.ipynb
clase_01/practicas/: practica_01.md
clase_01/presentacion/: index.html
clase_01/src/: mediciones.py
clase_02/notebooks/: clase_02_listas_sets_dicts.ipynb
clase_02/practicas/: practica_02.md
clase_02/presentacion/: index.html
clase_02/src/: __init__.py
clase_03/: README.md
clase_03/notebooks/: Notas_3.ipynb  clase_03_tda_pilas.ipynb
clase_03/practicas/: practica_03.md
clase_03/presentacion/: index.html
clase_03/src/: herramientas_pila.py
clase_04/: README.md  evidencia_pytest.txt
clase_04/Aristeo/: clase_04_pilas_Aristeo_pytest.ipynb
clase_04/src/: pilas.py
clase_05/: README.md  evidencia_pytest.txt
clase_06/: README.md
clase_07/: README.md
clase_08/: README.md
clase_09/: README.md
clase_10/: README.md
clase_11/: README.md
clase_12/: README.md  requirements.txt
clase_13/: README.md  implementacion.py  requirements.txt
clase_14/: README.md
clase_15/: README.md  requirements.txt
clase_16/: README.md  implementacion.py  requirements.txt
clase_17/: README.md
clase_18/: README.md
clase_19/: README.md  requirements.txt
clase_20/: README.md
docs/: README.md  flujo_pull_request.md  guia_estudiantes.md  guia_git.md
entregas/: README.md  alumnos.csv
scripts/: README.md  evaluar.py  generar_indices.py  validar_entregas.py
(+1091 files in other folders)
